fix(SearchBar): update z-index

--- a/src/components/SearchBar/styles.css
+++ b/src/components/SearchBar/styles.css
@@ -8,7 +8,7 @@
   line-height: 22px;
   box-shadow: 12px 0px 16px 10px rgba(30, 30, 30, 0.08);
   height: 60px;
-  z-index: 0;
+  z-index: 5;
 
   position: sticky;
   top: 0;
